# colfinancial

./: .gitignore  README.md  TODO.md  pyproject.toml  start.sh
colfinancial/: __init__.py  extract.py  transaction.py
core/: extract.py  transaction.py
notebooks/: Example 1.py
sandbox/: __init__.py  looper.py
